# geochron-at-home

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  backup.sh  docker-compose-test.yml  docker-compose.yml  env  gah.py  gahrc  gen_jwt.py  init_db.sh  manage.py  production_env  readme.txt  requirements.txt  site_default_users.py  site_init.sh  upload_projects.py  watch-for-upload.sh
api/: login.py  projects.py
ftc/: admin.py  apiviews.py  get_image_size.py  get_img_list_of_grain.py  grain_uinfo.py  load_rois.py  models.py  parse_image_name.py  save_rois_regions.py  test_api.py  test_integration.py  test_selenium.py  test_unit.py  tests.py  urls.py  views.py
ftc/fixtures/: counter_verification.json  essential.json  grain1_region.json  grain1_region_hole.json  grain1_user_regions.json  grain6.json  grain_with_images.json  grain_with_images2.json  grain_with_images5.json  grain_with_images_mica_only.json  grain_with_images_mineral_only.json  grain_with_negative_region.json  grain_with_small_region.json  grains.json  grains2.json  groups.json  images.json  projects.json  results.json  results2.json  results6.json  results_analyst.json  results_counter_user.json  results_for_gwi_m.json  results_test_user.json  samples.json  test_user.json  tutorial_pages.json  tutorial_result_admin.json  tutorial_result_tester.json  users.json
gah/: README.md  __init__.py  gah.py  pyproject.toml
geochron/: __init__.py  asgi.py  gah.py  pyproject.toml  settings.py  urls.py  wsgi.py
geochron/gah/: gah.py  pyproject.toml
templates/: 429.html
test/: integration.py
(+85 files in other folders)
